[gd_scene load_steps=4 format=3 uid="uid://chgw35ot3cfnw"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_vk8dv"]
[ext_resource type="PackedScene" uid="uid://c7fc8soemy4q8" path="res://scenes/player/player.tscn" id="3_bvj4w"]
[ext_resource type="PackedScene" uid="uid://ch7q4o4dgtfho" path="res://scenes/user interface/ui.tscn" id="3_byouo"]

[node name="Level" type="Node2D"]
script = ExtResource("1_vk8dv")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
position = Vector2(565, 1077)
color = Color(0.701961, 0.584314, 0.776471, 1)
blend_mode = 1

[node name="Ground" type="Node2D" parent="."]

[node name="Decals" type="Node2D" parent="Ground"]

[node name="InfestationBG" type="Node2D" parent="Ground"]

[node name="InfestationFG" type="Node2D" parent="Ground"]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("3_bvj4w")]
position = Vector2(-194, 1236)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="UI" parent="." instance=ExtResource("3_byouo")]

[connection signal="flashstick_fired" from="Player" to="." method="_on_player_flashstick_fired"]
[connection signal="grenade_fired" from="Player" to="." method="_on_player_grenade_fired"]
[connection signal="laser_fired" from="Player" to="." method="_on_player_laser_fired"]
